[package]
name = "expr-lang"
version = "0.2.0"
edition = "2021"
authors = ["@jdx"]
license = "MIT"
documentation = "https://docs.rs/expr-lang"
homepage = "https://github.com/jdx/expr-lang"
repository = "https://github.com/jdx/expr-lang"
description = "Implementation of expr language in Rust"
include = [
    "/src/**/*.pest",
    "/src/**/*.rs",
]

[lib]
name = "expr"

[dependencies]
indexmap = "2"
regex = "1"
thiserror = "2"
pest_derive = "2"
pest = "2"
log = "0.4"
strum = { version = "0.26", features = ["derive"] }
once_cell = "1"

[dev-dependencies]
test-log = "0.2"
proptest = "1"

[package.metadata.release]
pre-release-hook = ["git", "cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}"]
